[package]
name = "cometlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24"
rfd = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
image = "0.24"
base64 = "0.21"
lazy_static = "1.4"
winapi = { version = "0.3", features = ["winuser", "tlhelp32", "processthreadsapi", "handleapi", "winnt", "libloaderapi", "memoryapi"] }
walkdir = "2.5.0"
